--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "moment": "^2.30.1",
+    "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
